# funsearch

./: .env_example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  specs_example_cap_set.py  test_output.py
implementation/: code_manipulation.py  config.py  evaluator.py  evaluator_test.py  funsearch.py  programs_database.py  sampler.py
tests/: code_manipulation_test.py  evaluator_test.py  funsearch_test.py  programs_database_test.py  sampler_test.py
